--- a/bench-hanoi/js/package.json
+++ b/bench-hanoi/js/package.json
@@ -1,6 +1,9 @@
 {
+    "name": "js-bench",
     "type": "module",
     "scripts": {
         "start": "./main.js"
-    }
+    },
+    "module": "lib.js",
+    "types": "lib.d.js"
 }
